# Speculative-Fiction-Bot

./: .gitattributes  .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt
speculative-fiction-bot/: isfdb_catalog.csv  sff_scraper.py  speculative-fiction-bot.py  speculative.py  speculative_fiction_bot.py
tests/: test_speculative.py
