[tool.poetry]
name = "Speculative"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
praw = "^6.5.1"
clevercsv = "^0.5.5"
youtube_dl = "^2020.3.8"
pendulum = "^2.1.0"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
